[package]
name = "pair_correlation"
version = "0.1.0"
authors = ["Timothy Middlemas <tm17@princeton.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
structopt = "0.3"
rayon = "1.1"
itertools = "0.9"
