[package]
name = "pair_correlation"
version = "0.1.0"
authors = ["Timothy Middlemas <tm17@princeton.edu>"]
edition = "2018"
build = "build.rs"

[features]
using_make = []

[build-dependencies]
vergen = "3"
rustc_version = "0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
structopt = "0.3"
rayon = "1.1"
itertools = "0.9"
nalgebra = "0.18"
